--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ DATABASE_URL=mysql://root:root@localhost:3306/letrading
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://localhost:1025
 ###< symfony/swiftmailer-bundle ###
