--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,13 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    stripe_public_key: pk_test_sN4oVjcrfhco1LWTNU5KMMoC0093Tqt6UA
+    stripe_secret_key: sk_test_RMtfNF1f16KyqYqwnsWeQYsK00y0UDUxUB
+    payment:
+        currency: eur
+        decimal: true
+        premium_amount: 3000
+        classic_amount: 50
 
 services:
     # default configuration for services in *this* file
@@ -25,3 +32,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Client\StripeClient:
+        class: App\Client\StripeClient
+        arguments: ['%stripe_secret_key%', '%payment%', '@doctrine.orm.entity_manager', '@logger']
