--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,9 +2,9 @@ vich_uploader:
   db_driver: orm
 
   mappings:
-    products:
-      uri_prefix: /images/posts
-      upload_destination: "%kernel.project_dir%/public/images/posts"
+    images_site:
+      uri_prefix: /images
+      upload_destination: "%kernel.project_dir%/public/images"
       inject_on_load: false
       delete_on_update: true
       delete_on_remove: true
