--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
       "@auto-scripts"
     ],
     "compile": [
+      "php bin/console make:migration",
       "php bin/console doctrine:migrations:migrate"
     ]
   },
