--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=576ea1903b79ee9c119a04801fad4109
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@localhost:3306/letrading
+DATABASE_URL=mysql://root:@localhost:3306/letrading
 
 ###< doctrine/doctrine-bundle ###
 
@@ -35,3 +35,16 @@ DATABASE_URL=mysql://root:root@localhost:3306/letrading
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=smtp://localhost:1025
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+MERCURE_PUBLISH_URL=http://localhost:3000/hub
+MERCURE_JWT_KEY=myJWTKey
+###< symfony/mercure-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
