--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,11 @@
     "php": "^7.1.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "ext-json": "^1.7",
     "cocur/slugify": "^4.0",
     "friendsofsymfony/ckeditor-bundle": "^2.2",
     "fzaninotto/faker": "^1.9",
+    "lcobucci/jwt": "^3.3",
     "sensio/framework-extra-bundle": "^5.1",
     "stripe/stripe-php": "^7.17",
     "symfony/asset": "4.4.*",
@@ -19,6 +21,8 @@
     "symfony/framework-bundle": "4.4.*",
     "symfony/http-client": "4.4.*",
     "symfony/intl": "4.4.*",
+    "symfony/mercure-bundle": "^0.2.3",
+    "symfony/messenger": "4.4.*",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "*",
     "symfony/process": "4.4.*",
