--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "friendsofsymfony/ckeditor-bundle": "^2.2",
     "fzaninotto/faker": "^1.9",
     "sensio/framework-extra-bundle": "^5.1",
-    "stripe/stripe-php": "^7.17",
+    "stripe/stripe-php": "^7.22",
     "symfony/asset": "4.4.*",
     "symfony/console": "4.4.*",
     "symfony/dotenv": "4.4.*",
+    "symfony/error-handler": "4.4.*",
     "symfony/expression-language": "4.4.*",
     "symfony/flex": "^1.3.1",
     "symfony/form": "4.4.*",
