fix commentaire mercure

--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ MAILER_URL=smtp://localhost:1025
 
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
-MERCURE_PUBLISH_URL=http://localhost:3000/hub
+MERCURE_PUBLISH_URL=http://127.0.0.1:3000/hub
 MERCURE_JWT_KEY=myJWTKey
 ###< symfony/mercure-bundle ###
 
