--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "symfony/validator": "4.4.*",
     "symfony/web-link": "4.4.*",
     "symfony/yaml": "4.4.*",
-    "vich/uploader-bundle": "^1.12"
+    "vich/uploader-bundle": "^1.12",
+    "ext-json": "*"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.3",
