Modiifcation liste convs design

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,8 @@
 security:
   role_hierarchy:
+    ROLE_USER: [ROLE_ALLOWED_TO_SWITCH]
     ROLE_ADMIN: ROLE_USER
-    ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+    ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
   encoders:
     App\Entity\User:
       algorithm: auto
