--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
     "php": "^7.1.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "ext-json": "^1.7",
+    "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
     "cocur/slugify": "^4.0",
     "friendsofsymfony/ckeditor-bundle": "^2.2",
+    "friendsofsymfony/jsrouting-bundle": "^2.5",
     "fzaninotto/faker": "^1.9",
     "lcobucci/jwt": "^3.3",
     "sensio/framework-extra-bundle": "^5.1",
@@ -36,8 +37,7 @@
     "symfony/validator": "4.4.*",
     "symfony/web-link": "4.4.*",
     "symfony/yaml": "4.4.*",
-    "vich/uploader-bundle": "^1.12",
-    "ext-json": "*"
+    "vich/uploader-bundle": "^1.12"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.3",
