--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -49,3 +49,10 @@ vich_uploader:
       delete_on_update: true
       delete_on_remove: true
       namer: Vich\UploaderBundle\Naming\HashNamer
+    message:
+      uri_prefix: /images/message
+      upload_destination: "%kernel.project_dir%/public/images/message"
+      inject_on_load: false
+      delete_on_update: true
+      delete_on_remove: true
+      namer: Vich\UploaderBundle\Naming\HashNamer
