--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,7 +4,7 @@ twig:
   strict_variables: "%kernel.debug%"
   form_themes:
     [
-      "bootstrap_4_layout.html.twig",
+      "form/letrading_layout.html.twig",
       "@FOSCKEditor/Form/ckeditor_widget.html.twig",
     ]
   globals:
