--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "lcobucci/jwt": "^3.3",
     "sensio/framework-extra-bundle": "^5.1",
     "stripe/stripe-php": "^7.22",
+    "symfony/apache-pack": "^1.0",
     "symfony/asset": "4.4.*",
     "symfony/console": "4.4.*",
     "symfony/dotenv": "4.4.*",
