--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -56,3 +56,10 @@ vich_uploader:
       delete_on_update: true
       delete_on_remove: true
       namer: Vich\UploaderBundle\Naming\HashNamer
+    offers:
+      uri_prefix: /images/offers
+      upload_destination: "%kernel.project_dir%/public/images/offers"
+      inject_on_load: false
+      delete_on_update: true
+      delete_on_remove: true
+      namer: Vich\UploaderBundle\Naming\HashNamer
